# forge-core

./: .gitignore  Cargo.toml  LICENSE  README.md  justfile
examples/: mlp_compare.py
examples/mlp-poc/: Cargo.toml
examples/mlp-poc/src/: main.rs
forge-core/: Cargo.toml
forge-core/src/: error.rs  lib.rs  tensor.rs
forge-core/src/ops/: mod.rs  rms_norm.rs  sigmoid.rs  silu.rs  softplus.rs
forge-kernels/: Cargo.toml  build.rs
forge-kernels/src/: cuda_utils.cuh  lib.rs  rms_norm.cu  sigmoid.cu  silu.cu  softplus.cu
forge-smoke/: Cargo.toml
forge-smoke/src/: main.rs
